# homebridge_automations

./: .gitignore  pyproject.toml  remember_wohnzimmer_memory.json
src/py/deployment/scripts/coffee_shutdown_timer/: machine_turned_off.py  machine_turned_off.sh  machine_turned_on.py  machine_turned_on.sh  machined_turned_off.sh
src/py/deployment/scripts/remember_wohnzimmer/: remember_wohnzimmer.py  remember_wohnzimmer.sh  restore_wohnzimmer.py  restore_wohnzimmer.sh
src/py/deployment/utils/: gaggiuino_client.py  gagguino_client.py  home_controller.py  pushcut.py  remember_states.py
