[project]
name = "homebridge_automations"
version = "0.0.1"
description = "Homebridge automations"
requires-python = ">=3.10"
dependencies = [
    "phue",
    "discoverhue",
]

[dependency-groups]
dev = [
    "pytest",
    "jupyter",
    "ruff",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
]

